# Ultron

./: AGENTS.md  index.html  package-lock.json  package.json  vite.config.js
.github/workflows/: build.yml
src/: App.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/data/: glossary.json  http_codes.json  ports.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: database.rs  favorites.rs  mod.rs  network.rs  system.rs
src-tauri/src/db/: init.rs  mod.rs  models.rs  seeds.rs
src-tauri/src/network/: http.rs  mod.rs
src/components/: ErrorBoundary.jsx
src/components/home/: Dashboard.jsx  PublicIpWidget.jsx  QuickActions.jsx  RecentTools.jsx
src/components/layout/: CommandPalette.jsx  Sidebar.jsx  ThemePanel.jsx  Topbar.jsx
src/lib/: search.js  tauri.js  themeManager.js
src/stores/: appStore.js
src/styles/: globals.css
src/tools/: Base64Decoder.jsx  GlossaryViewer.jsx  HttpCodes.jsx  IpPublic.jsx  IpSubnetCalculator.jsx  JsonYamlConverter.jsx  JwtDecoder.jsx  PortsCatalog.jsx  TerminalTool.jsx  UuidGenerator.jsx  registry.js
