[package]
name = "ultron"
version = "1.0.0"
description = "Native Desktop Operations Hub"
authors = ["Ultron"]
edition = "2021"

[lib]
name = "ultron_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt", "macros", "net", "time"] }
reqwest = { version = "0.12", features = ["json"] }
duckdb = { version = "1", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }

# Perfil DEV: ultra-rápido, sin optimizaciones
[profile.dev]
opt-level = 0
codegen-units = 256
incremental = true
debug = true
lto = false
strip = "none"

# Perfil RELEASE: máxima potencia para .exe final
[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
# panic = "abort"    # Comentado: antivirus corporativos lo marcan
# strip = "symbols" # Comentado: causa falsos positivos
strip = "debuginfo"
debug = false
incremental = false
